Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1190

Log block manager can fatal when block IDs are reused

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Public beta
    • 0.6.0
    • tserver
    • None

    Description

      Martin observed this, in his benchmarks:

       exec /opt/cloudera/parcels/KUDU-0.1.0-1.kudu0.1.0.p0.20/lib/kudu/sbin/kudu-tserver --tserver_master_addrs=e1101.halxg.cloudera.com --flagfile=/var/run/cloudera-scm-agent/process/19236-kudu-KUDU_TSERVER/gflagfile
      F0925 16:15:25.277806 64041 log_block_manager.cc:1490] Found already existent block record: block_id {
        id: 2031197845630387271
      }
      op_type: CREATE
      timestamp_us: 1442006061852044
      offset: 5537234944
      length: 28997
      *** Check failure stack trace: ***
          @           0x73cdfd  (unknown)
          @           0x7412dd  (unknown)
          @           0x73f14b  (unknown)
          @           0x73f471  (unknown)
          @          0x122cfa0  (unknown)
          @          0x12321df  (unknown)
          @          0x12ac213  (unknown)
          @          0x12aa35f  (unknown)
        
        @          0x12a7b6f  (unknown)
          @       0x3236407851  (unknown)
          @       0x32360e894d  (unknown)
          @              (nil)  (unknown)
      
      

      Attachments

        Activity

          People

            tlipcon Todd Lipcon
            dralves David Alves
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: