KUDU-1190. Fix LogBlockManager startup when a block ID has been reused

This fixes an issue seen in stress testing where the LogBlockManager refuses to
come back up after a block ID has been reused.

The issue we ran into is that a block ID was reused across two containers. The
first has a "CREATE <b>" followed by "DELETE <b>". The second has just a
"CREATE <b>". If the second container is processed during startup before the
first one, then we would crash upon seeing the 'duplicate' CREATE record.

The patch solves the issue by first building a block map of only the blocks
within a single container, and then only merging that map into the global array
after accounting for deletions.

Change-Id: Iba64066cf56b208dc786f6b275e563938df0e3a6
Reviewed-on: http://gerrit.cloudera.org:8080/1287
Reviewed-by: Jean-Daniel Cryans
Tested-by: Todd Lipcon <todd@cloudera.com>